# codemux

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  clippy.toml  justfile
.github/workflows/: ci.yml  publish-crates.yml  release.yml
apps/daemon/: Cargo.toml
apps/daemon/src/: bootstrap.rs  cli.rs  conn.rs  error.rs  fs_layout.rs  lib.rs  main.rs  pty.rs  session.rs  supervisor.rs
apps/daemon/tests/: proto_redeploy.rs  proto_setsid.rs  proto_smoke.rs  proto_snapshot.rs  proto_ssh_disconnect.rs
apps/daemon/tests/common/: mod.rs  ssh.rs
apps/tui/: Cargo.toml
apps/tui/src/: agent_meta_worker.rs  bootstrap_worker.rs  config.rs  fuzzy_worker.rs  git_branch.rs  host_title.rs  index_cache.rs  index_manager.rs  index_worker.rs  keymap.rs  launch.rs  log_tail.rs  main.rs  persistence.rs  pty_title.rs  repo_name.rs  runtime.rs  spawn.rs  spawn_modal.rs  ssh_config.rs  statusline_ipc.rs  toast.rs  url_scan.rs
apps/tui/src/snapshots/: codemux__runtime__tests__snapshot_help_screen.snap  codemux__runtime__tests__snapshot_navigator_popup.snap  codemux__spawn__tests__render_empty_boot_screen_snapshot.snap  codemux__spawn__tests__snapshot_spawn_modal_default.snap
apps/tui/src/status_bar/: mod.rs  segments.rs
apps/tui/src/ui/: chrome.rs  keymap.rs  mod.rs  term_pane.rs
apps/tui/tests/: pty_arg_invalid.rs  pty_bounce.rs  pty_config_invalid.rs  pty_crash.rs  pty_digit.rs  pty_dismiss.rs  pty_drag_select.rs  pty_drilldown.rs  pty_focus.rs  pty_help.rs  pty_indexing.rs  pty_lifecycle.rs  pty_modal_cwd.rs  pty_modal_suppress.rs  pty_mouse_overlay_gate.rs  pty_nav.rs  pty_panic.rs  pty_paste_snaps.rs  pty_quick_switch.rs  pty_reap.rs  pty_scroll.rs  pty_smoke.rs  pty_spawn.rs  pty_spawn_action.rs  pty_spawn_alias.rs  pty_spawn_autocomplete.rs  pty_spawn_bounce.rs  pty_status_bar.rs  pty_switcher.rs  pty_tab_click.rs  pty_tab_drag.rs  pty_url_open.rs
apps/tui/tests/common/: mod.rs
crates/codemuxd-bootstrap/: Cargo.toml  build.rs
crates/codemuxd-bootstrap/bootstrap-root/: Cargo.toml
crates/codemuxd-bootstrap/examples/: smoke.rs
crates/codemuxd-bootstrap/src/: error.rs  lib.rs  remote_fs.rs
crates/codemuxd-bootstrap/tests/: manifest_filter.rs  proto_ssh_cold_start.rs
crates/session/: Cargo.toml
crates/session/src/: bootstrap.rs  domain.rs  error.rs  lib.rs  ports.rs  repository.rs  spawner.rs  transport.rs  use_cases.rs
crates/session/src/infra/: mod.rs  pty_local.rs  pty_ssh.rs  sqlite_store.rs
crates/shared-kernel/: Cargo.toml
crates/shared-kernel/src/: lib.rs
crates/store/: Cargo.toml
crates/store/src/: error.rs  lib.rs  repository.rs  schema.rs
crates/test-fakes/: Cargo.toml
crates/test-fakes/src/: lib.rs
crates/test-ssh-harness/: Cargo.toml
crates/test-ssh-harness/src/: lib.rs
crates/wire/: Cargo.toml
crates/wire/src/: error.rs  lib.rs  messages.rs  version.rs
docs/: 001--vision.md  002--scenarios.md  002--use-cases.md  003--acceptance-criteria.md  004--architecture.md  005--roadmap.md  architecture.md  codemuxd-stages.md  roadmap.md  tmp--ac-audit-findings.md  use-cases.md  vision.md
docs/plans/: 2026-05-10--e2e-testing.md  2026-05-15--persistence-session-id-spike.md
scripts/: capture-claude-titles.py  dump-claude-config.sh
