[workspace]
resolver = "3"
members = [
    "apps/tui",
    "apps/daemon",
    "crates/codemuxd-bootstrap",
    "crates/session",
    "crates/shared-kernel",
    "crates/wire",
]

[workspace.package]
edition = "2024"
rust-version = "1.94.1"
license = "UNLICENSED"
publish = false
repository = "https://github.com/codemuxhq/codemux"

[workspace.dependencies]
# Internal crates
codemuxd-bootstrap = { path = "crates/codemuxd-bootstrap" }
codemux-session = { path = "crates/session" }
codemux-shared-kernel = { path = "crates/shared-kernel" }
codemux-wire = { path = "crates/wire" }

# Error handling (AD-17)
thiserror = "2.0.18"
color-eyre = "0.6.5"

# Tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

# Persistence (AD-7)
rusqlite = { version = "0.39.0", features = ["bundled"] }
rusqlite_migration = "2.5.0"

# PTY (AD-10)
portable-pty = "0.9.0"

# TUI (AD-11)
ratatui = "0.30.0"
tui-term = "0.3.4"
vt100 = "0.16.2"
crossterm = "0.29.0"

# CLI
clap = { version = "4.6.1", features = ["derive", "env"] }

# Channels
crossbeam-channel = "0.5.15"

# Config (P1.3 keymap registry)
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9"

# Filesystem glob expansion. Used by the spawn-modal SSH host loader to
# resolve `Include config.d/*` style directives in `~/.ssh/config`.
glob = "0.3"

# Test-only: scratch directories for filesystem integration tests.
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "thin"
