[workspace]
resolver = "3"
members = [
    "apps/tui",
    "apps/daemon",
    "crates/codemuxd-bootstrap",
    "crates/session",
    "crates/shared-kernel",
    "crates/wire",
]

[workspace.package]
edition = "2024"
rust-version = "1.94.1"
license = "UNLICENSED"
publish = false
repository = "https://github.com/codemuxhq/codemux"

[workspace.dependencies]
# Internal crates
codemuxd-bootstrap = { path = "crates/codemuxd-bootstrap" }
codemux-session = { path = "crates/session" }
codemux-shared-kernel = { path = "crates/shared-kernel" }
codemux-wire = { path = "crates/wire" }

# Error handling (AD-17)
thiserror = "2.0.18"
color-eyre = "0.6.5"

# Tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

# Persistence (AD-7)
rusqlite = { version = "0.39.0", features = ["bundled"] }
rusqlite_migration = "2.5.0"

# PTY (AD-10)
portable-pty = "0.9.0"

# TUI (AD-11)
ratatui = "0.30.0"
tui-term = "0.3.4"
vt100 = "0.16.2"
crossterm = "0.29.0"

# CLI
clap = { version = "4.6.1", features = ["derive", "env"] }

# Channels
crossbeam-channel = "0.5.15"

# Config (P1.3 keymap registry)
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9"

# JSON used by the disk-cached fuzzy directory index. Local cache lives
# at `~/.cache/codemux/index.json`; remote cache is the same shape
# stored on the SSH host and read/written through the existing
# ControlMaster socket. JSON over TOML so the file is reasonable at
# 100k entries (TOML's table-of-arrays gets unwieldy at that volume)
# and trivially `cat`-able when debugging cache invalidation.
serde_json = "1.0"

# Filesystem glob expansion. Used by the spawn-modal SSH host loader to
# resolve `Include config.d/*` style directives in `~/.ssh/config`.
glob = "0.3"

# Spawn-modal fuzzy directory indexer. `ignore` is the ripgrep walker —
# respects `.gitignore` / `.ignore` and parallelizes the walk; default
# features are exactly what we need.
ignore = "0.4.25"

# Fuzzy matcher used by the spawn modal to rank directories returned
# from the indexer. `nucleo-matcher` is the engine Helix uses; pure
# Rust, ~10 µs per match on a 50k haystack — well below the modal's
# per-keystroke render budget.
nucleo-matcher = "0.3.1"

# Test-only: scratch directories for filesystem integration tests.
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "thin"
