[workspace]
resolver = "3"
members = [
    "apps/tui",
    "apps/daemon",
    "crates/codemuxd-bootstrap",
    "crates/session",
    "crates/shared-kernel",
    "crates/test-fakes",
    "crates/test-ssh-harness",
    "crates/wire",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"
license = "MIT OR Apache-2.0"
# Crates inherit `publish = true` by default. The two test-only crates
# (`crates/test-fakes`, `crates/test-ssh-harness`) override with an
# explicit `publish = false` in their own manifests. See AD-31.
publish = true
description = "Personal TUI multiplexer for coding-agent sessions across local and SSH hosts."
homepage = "https://github.com/codemuxhq/codemux"
repository = "https://github.com/codemuxhq/codemux"
readme = "README.md"
# `keywords` and `categories` are NOT inherited from the workspace by
# Cargo (each `[package]` declares its own). The workspace-level
# defaults below are kept as a reference; per-crate overrides live in
# each `apps/*/Cargo.toml` and `crates/*/Cargo.toml`.
keywords = ["tui", "multiplexer", "ssh", "claude", "ratatui"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Internal crates. Each carries an explicit `version` so `cargo publish`
# can replace the path with a registry constraint when uploading. The
# version stays in lock-step with `[workspace.package].version`; the
# `release-tag` recipe in `justfile` rewrites both in one pass.
codemuxd-bootstrap = { path = "crates/codemuxd-bootstrap", version = "0.1.0" }
codemux-session = { path = "crates/session", version = "0.1.0" }
codemux-shared-kernel = { path = "crates/shared-kernel", version = "0.1.0" }
codemux-test-fakes = { path = "crates/test-fakes", version = "0.1.0" }
codemux-test-ssh-harness = { path = "crates/test-ssh-harness", version = "0.1.0" }
codemux-wire = { path = "crates/wire", version = "0.1.0" }

# Error handling (AD-17)
thiserror = "2.0.18"
color-eyre = "0.6.5"

# Tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

# Persistence (AD-7)
rusqlite = { version = "0.39.0", features = ["bundled"] }
rusqlite_migration = "2.5.0"

# PTY (AD-10)
portable-pty = "0.9.0"

# TUI (AD-11)
ratatui = "0.30.0"
tui-term = "0.3.4"
vt100 = "0.16.2"
crossterm = "0.29.0"

# CLI
clap = { version = "4.6.1", features = ["derive", "env"] }

# Channels
crossbeam-channel = "0.5.15"

# Config (P1.3 keymap registry)
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9"

# JSON used by the disk-cached fuzzy directory index. Local cache lives
# at `~/.cache/codemux/index.json`; remote cache is the same shape
# stored on the SSH host and read/written through the existing
# ControlMaster socket. JSON over TOML so the file is reasonable at
# 100k entries (TOML's table-of-arrays gets unwieldy at that volume)
# and trivially `cat`-able when debugging cache invalidation.
serde_json = "1.0"

# Filesystem glob expansion. Used by the spawn-modal SSH host loader to
# resolve `Include config.d/*` style directives in `~/.ssh/config`.
glob = "0.3"

# Spawn-modal fuzzy directory indexer. `ignore` is the ripgrep walker —
# respects `.gitignore` / `.ignore` and parallelizes the walk; default
# features are exactly what we need.
ignore = "0.4.25"

# Fuzzy matcher used by the spawn modal to rank directories returned
# from the indexer. `nucleo-matcher` is the engine Helix uses; pure
# Rust, ~10 µs per match on a 50k haystack — well below the modal's
# per-keystroke render budget.
nucleo-matcher = "0.3.1"

# Test-only: scratch directories for filesystem integration tests.
tempfile = "3"

# Test-only: serializes PTY-based E2E tests so they don't race on
# terminal-size negotiation when run in parallel. Declared at workspace
# scope because the daemon's T4 suite (`apps/daemon/tests/proto_*.rs`)
# will need the same `#[serial]` attribute. See
# `docs/plans/2026-05-10--e2e-testing.md`.
serial_test = "3.4.0"

# Test-only: snapshot diffing for fast-tier render asserts and
# decoded-wire-frame asserts in the daemon E2E suite. Declared at
# workspace scope so `apps/tui` and `apps/daemon` pull the same version
# (mismatched insta versions risk divergent `.snap` headers).
insta = "1.47.2"
# Test-only: readable assertion diffs. Same workspace-pinning rationale.
pretty_assertions = "1.4.1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "thin"

[profile.dist]
inherits = "release"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.31.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# A GitHub repo to push Homebrew formulas to
tap = "codemuxhq/homebrew-tap"
# Customize the Homebrew formula name
formula = "codemux"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]

[workspace.metadata.dist.github-custom-runners.aarch64-unknown-linux-gnu]
runner = "ubuntu-22.04"
host = "x86_64-unknown-linux-gnu"
