[package]
name = "codemux-daemon"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[[bin]]
name = "codemuxd"
path = "src/main.rs"

[lib]
# Re-export the supervisor surface so integration tests (and a future Stage 4
# in-process round-trip from the TUI) can drive the daemon without forking a
# subprocess. The binary entry point in `main.rs` is a thin shell over `lib`.
path = "src/lib.rs"

[dependencies]
codemux-wire.workspace = true
portable-pty.workspace = true
crossbeam-channel.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
color-eyre.workspace = true
# Pure VT100 parser — no terminal/UI surface. The daemon mirrors the
# remote child's screen so a new client attach can replay state via
# `Screen::state_formatted` instead of waiting for the child to redraw.
# vt100 is otherwise a TUI-side dep; this is the one carve-out (see
# AD on "daemon owns a session-scoped parser" in docs/004--architecture.md).
vt100.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
