[package]
name = "codemux-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
description = "codemuxd: per-host daemon that holds remote PTYs for codemux."

# `publish = false` (inherited from the workspace) hides this crate
# from `cargo publish`, but we still ship the `codemuxd` binary via
# `dist`. The opt-in below tells `dist` to treat this package as
# distable despite `publish = false`. The slow-tier-test fake bin
# lives in `crates/test-fakes/` (which has no dist opt-in), so dist
# only sees `codemuxd` here. See AD-30.
[package.metadata.dist]
dist = true

[[bin]]
name = "codemuxd"
path = "src/main.rs"

[lib]
# Re-export the supervisor surface so integration tests (and a future Stage 4
# in-process round-trip from the TUI) can drive the daemon without forking a
# subprocess. The binary entry point in `main.rs` is a thin shell over `lib`.
path = "src/lib.rs"

[features]
# Off by default. Gates compilation of the slow-tier T4 E2E suite at
# `apps/daemon/tests/proto_*.rs` (each `#![cfg(feature = "test-fakes")]`-
# prefixed). The fake binary those tests invoke (`fake_daemon_agent`)
# lives in `crates/test-fakes/` and is unconditional there; this
# feature is just the gate that keeps the test files (and their wire-
# protocol harness imports) out of a default `cargo test` compile. The
# `just check-e2e` recipe enables the feature explicitly. Mirrors the
# `apps/tui` `test-fakes` pattern. See AD-30.
test-fakes = []

[dependencies]
codemux-wire.workspace = true
portable-pty.workspace = true
crossbeam-channel.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
color-eyre.workspace = true
# Pure VT100 parser — no terminal/UI surface. The daemon mirrors the
# remote child's screen so a new client attach can replay state via
# `Screen::state_formatted` instead of waiting for the child to redraw.
# vt100 is otherwise a TUI-side dep; this is the one carve-out (see
# AD on "daemon owns a session-scoped parser" in docs/004--architecture.md).
vt100.workspace = true

[dev-dependencies]
tempfile.workspace = true
# T4 daemon E2E suite (`apps/daemon/tests/proto_*.rs`) speaks the wire
# protocol directly through a `UnixStream`. `codemux-wire` is already a
# production dep above; declared here only for the dev-only insta /
# pretty_assertions surface used by the same suite.
insta.workspace = true
pretty_assertions.workspace = true
# Shared real-sshd subprocess harness used by the SSH-leg E2E test
# (`proto_ssh_disconnect.rs`). Lives in its own workspace crate so
# `crates/codemuxd-bootstrap` can also depend on it from the other
# direction without inverting the production dependency graph.
codemux-test-ssh-harness.workspace = true

[lints]
workspace = true
