[package]
name = "codemux-tui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[[bin]]
name = "codemux"
path = "src/main.rs"

[dependencies]
codemux-session.workspace = true
codemux-shared-kernel.workspace = true
codemuxd-bootstrap.workspace = true

color-eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

ratatui.workspace = true
tui-term.workspace = true
vt100.workspace = true
crossterm.workspace = true

clap.workspace = true

crossbeam-channel.workspace = true

serde.workspace = true
toml.workspace = true
glob.workspace = true

# Base64 — needed to encode the OSC 52 clipboard payload emitted on
# selection-release. The hand-rolled alternative is ~30 lines, but
# adds an unsafe nibble surface; the crate is ~5 KB compiled.
base64 = "0.22"

[dev-dependencies]
tempfile.workspace = true
# `test-util` exposes `AgentTransport::for_test`, used by runtime unit
# tests to construct a `RuntimeAgent` without `claude` on PATH. Cargo
# unifies the dev-deps' feature set for `cargo test` only — release
# builds of `codemux` do not see this feature.
codemux-session = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
