[package]
name = "codemux-tui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[[bin]]
name = "codemux"
path = "src/main.rs"

# In-tree stub agent the E2E PTY harness points `CODEMUX_AGENT_BIN` at
# (see `tests/common/mod.rs`). Gated behind `test-fakes` so neither
# `cargo build --release` nor a default `cargo test` sees it; the
# `just check-e2e` recipe enables the feature explicitly. The harness
# resolves the binary via `env!("CARGO_BIN_EXE_fake_agent")`.
[[bin]]
name = "fake_agent"
path = "tests/bin/fake_agent.rs"
required-features = ["test-fakes"]

# Crashing-variant stub agent used by `tests/pty_crash.rs` to pin
# AC-037 (Ready -> Crashed on non-zero PTY exit). Same boot prompt as
# `fake_agent`, but exits 42 when stdin delivers the literal `QUIT`
# line (or on EOF). Kept as a separate `[[bin]]` rather than an argv
# flag so each fake binary stays single-purpose -- the happy-path
# fake's behavior contract is "exit 0 on EOF, period", and conflating
# it with a crash flag would make every existing PTY test implicitly
# depend on the default exit-code value. Same `test-fakes` gate as
# `fake_agent`. Resolved via `env!("CARGO_BIN_EXE_fake_agent_crashing")`.
[[bin]]
name = "fake_agent_crashing"
path = "tests/bin/fake_agent_crashing.rs"
required-features = ["test-fakes"]

# URL-printing variant used by `tests/pty_url_open.rs` to pin AC-041
# (Ctrl+click hands the URL to the OS opener). Prints the boot prompt
# followed by a known `https://...` URL so the test can target a cell
# inside the URL with a Ctrl+click and assert the recording-opener
# file gained that URL. Same single-purpose pattern as
# `fake_agent_crashing`. Resolved via `env!("CARGO_BIN_EXE_fake_agent_with_url")`.
[[bin]]
name = "fake_agent_with_url"
path = "tests/bin/fake_agent_with_url.rs"
required-features = ["test-fakes"]

[features]
# Off by default. Enables the `fake_agent` test binary and gates the
# slow-tier PTY tests in `tests/pty_*.rs` — both via
# `#![cfg(feature = "test-fakes")]` (so the test files don't even
# compile without the feature, since they reference the fake binary
# through `env!`) and via `#[ignore]` so a normal `cargo test`
# (without `--include-ignored`) skips them. See
# `docs/plans/2026-05-10--e2e-testing.md` (T2).
test-fakes = []

[dependencies]
codemux-session.workspace = true
codemux-shared-kernel.workspace = true
codemuxd-bootstrap.workspace = true

color-eyre.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

ratatui.workspace = true
tui-term.workspace = true
vt100.workspace = true
crossterm.workspace = true

clap.workspace = true

crossbeam-channel.workspace = true

serde.workspace = true
toml.workspace = true
serde_json.workspace = true
glob.workspace = true
ignore.workspace = true
nucleo-matcher.workspace = true

# Base64 — needed to encode the OSC 52 clipboard payload emitted on
# selection-release. The hand-rolled alternative is ~30 lines, but
# adds an unsafe nibble surface; the crate is ~5 KB compiled.
base64 = "0.22"

# Display-width measurement for the failure pane's centering math —
# `str::chars().count()` is wrong for wide glyphs (CJK, emoji) and
# would shift selection-extraction off the cells the renderer drew.
# Already pulled in transitively by ratatui; declared explicitly so
# the failure-pane code can use it directly.
unicode-width = "0.2"

[dev-dependencies]
tempfile.workspace = true
# `test-util` exposes `AgentTransport::for_test`, used by runtime unit
# tests to construct a `RuntimeAgent` without `claude` on PATH. Cargo
# unifies the dev-deps' feature set for `cargo test` only — release
# builds of `codemux` do not see this feature.
codemux-session = { workspace = true, features = ["test-util"] }

# Snapshot testing for the fast-tier render harness — see
# `docs/plans/2026-05-10--e2e-testing.md` (T0). `insta` diffs the
# `TestBackend`'s screen against a committed `.snap`; pending snapshots
# are reviewed with `cargo insta review` (wired as `just insta-review`).
# `pretty_assertions` is here for readable diffs on non-snapshot asserts
# inside the same test surface.
insta.workspace = true
pretty_assertions.workspace = true

# Slow-tier PTY harness deps (see `tests/common/mod.rs`).
# `vt100` parses the master-side byte stream into a cell grid the
# `screen_eventually` polling helper asserts against; `serial_test`
# guards the slow tier so terminal-size negotiation can't race when
# multiple PTY tests run in parallel. `portable-pty` is a production
# dep of `crates/session` (the indirect spawn path the runtime drives);
# the harness opens its own master/slave pair directly to host the
# spawned `codemux` subprocess, so it is declared here as a dev-dep
# inheriting the same workspace pin — no second-source-of-truth risk.
vt100.workspace = true
serial_test.workspace = true
portable-pty.workspace = true

[lints]
workspace = true
