[package]
name = "codemux-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "codemux: TUI multiplexer for coding-agent sessions."
# Per-crate; Cargo does not inherit `keywords` / `categories` from the
# workspace.
keywords = ["tui", "multiplexer", "ssh", "claude", "agent"]
categories = ["command-line-utilities"]

# `publish = true` (inherited from the workspace, see AD-31) means the
# crate goes to crates.io. The opt-in below also tells `dist` to treat
# this package as distable. The slow-tier-test fake bins live in
# `crates/test-fakes/` (which has no dist opt-in), so dist only sees
# `codemux` here. See AD-30 + AD-31.
[package.metadata.dist]
dist = true

[[bin]]
name = "codemux"
path = "src/main.rs"

[features]
# Off by default. Gates compilation of the slow-tier PTY tests in
# `tests/pty_*.rs` (each `#![cfg(feature = "test-fakes")]`-prefixed).
# The fake binaries those tests invoke live in `crates/test-fakes/`
# and are unconditional there; this feature is just the gate that
# keeps the test files (and their PTY-harness imports) out of a
# default `cargo test` compile. See AD-30.
test-fakes = []

[dependencies]
codemux-session.workspace = true
codemux-shared-kernel.workspace = true
codemux-store.workspace = true
codemuxd-bootstrap.workspace = true

color-eyre.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

ratatui.workspace = true
tui-term.workspace = true
vt100.workspace = true
crossterm.workspace = true

clap.workspace = true

crossbeam-channel.workspace = true

uuid.workspace = true

serde.workspace = true
toml.workspace = true
serde_json.workspace = true
glob.workspace = true
ignore.workspace = true
nucleo-matcher.workspace = true

# Base64 — needed to encode the OSC 52 clipboard payload emitted on
# selection-release. The hand-rolled alternative is ~30 lines, but
# adds an unsafe nibble surface; the crate is ~5 KB compiled.
base64 = "0.22"

# Display-width measurement for the failure pane's centering math —
# `str::chars().count()` is wrong for wide glyphs (CJK, emoji) and
# would shift selection-extraction off the cells the renderer drew.
# Already pulled in transitively by ratatui; declared explicitly so
# the failure-pane code can use it directly.
unicode-width = "0.2"

[dev-dependencies]
tempfile.workspace = true
# `test-util` exposes `AgentTransport::for_test`, used by runtime unit
# tests to construct a `RuntimeAgent` without `claude` on PATH. Cargo
# unifies the dev-deps' feature set for `cargo test` only — release
# builds of `codemux` do not see this feature.
codemux-session = { workspace = true, features = ["test-util"] }

# Snapshot testing for the fast-tier render harness — see
# `docs/plans/2026-05-10--e2e-testing.md` (T0). `insta` diffs the
# `TestBackend`'s screen against a committed `.snap`; pending snapshots
# are reviewed with `cargo insta review` (wired as `just insta-review`).
# `pretty_assertions` is here for readable diffs on non-snapshot asserts
# inside the same test surface.
insta.workspace = true
pretty_assertions.workspace = true

# Slow-tier PTY harness deps (see `tests/common/mod.rs`).
# `vt100` parses the master-side byte stream into a cell grid the
# `screen_eventually` polling helper asserts against; `serial_test`
# guards the slow tier so terminal-size negotiation can't race when
# multiple PTY tests run in parallel. `portable-pty` is a production
# dep of `crates/session` (the indirect spawn path the runtime drives);
# the harness opens its own master/slave pair directly to host the
# spawned `codemux` subprocess, so it is declared here as a dev-dep
# inheriting the same workspace pin — no second-source-of-truth risk.
vt100.workspace = true
serial_test.workspace = true
portable-pty.workspace = true

[lints]
workspace = true
