[package]
name = "codemuxd-bootstrap"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "codemux SSH adapter: assembles and ships the codemuxd tarball to remote hosts."
# Per-crate; not inherited from the workspace.
keywords = ["codemux", "ssh", "bootstrap", "deployment"]
categories = ["development-tools"]
# `build.rs` assembles the codemuxd-bootstrap tarball into OUT_DIR; the
# crate embeds it via include_bytes!. The build script rewrites the
# archive whenever apps/daemon, crates/wire, Cargo.lock,
# rust-toolchain.toml, or bootstrap-root/Cargo.toml change.
build = "build.rs"

[dependencies]
# `attach_agent` constructs `AgentTransport::SshDaemon(...)` directly —
# the session crate is the application core; this crate is the SSH
# adapter that drives it.
codemux-session.workspace = true

thiserror.workspace = true
tracing.workspace = true

[build-dependencies]
# Pure-Rust tar + gzip. Used only by build.rs to assemble the
# codemuxd-bootstrap tarball that `src/lib.rs` embeds via
# include_bytes!. flate2 defaults to its pure-Rust backend
# (`miniz_oxide`) so the build does not need any system libraries.
tar = "0.4"
flate2 = "1.0"
# Format-preserving TOML editor. Used by `build/manifest_filter.rs`
# to strip `[dev-dependencies]` tables from `apps/daemon/Cargo.toml`
# as it lands in the bootstrap tarball — see that file for rationale.
# Pinned to the same minor as the workspace's `toml` to keep the
# parser families in lockstep.
toml_edit = "0.25.11"

[dev-dependencies]
tempfile.workspace = true
# Tests in `src/lib.rs` decompress and inspect the embedded tarball
# produced by `build.rs`. Same crates as `[build-dependencies]` but
# Cargo doesn't share those with `cfg(test)` — re-declare here.
tar = "0.4"
flate2 = "1.0"
# `tests/manifest_filter.rs` `#[path]`-includes `build/manifest_filter.rs`,
# which depends on toml_edit. Mirrors the `[build-dependencies]` entry
# above so the integration-test binary can compile the same helper.
toml_edit = "0.25.11"
# Drift check: the manifest-consistency test parses both the parent
# workspace's `Cargo.toml` and `bootstrap-root/Cargo.toml` to verify
# every `workspace = true` dep the daemon uses is mirrored on the
# bootstrap side. Without this, adding a new daemon dep silently
# breaks the remote build (resolver fails on the unknown name).
toml.workspace = true
# AC-003 cold-start E2E (`tests/proto_ssh_cold_start.rs`) drives
# `prepare_remote` + `attach_agent` against the real-sshd subprocess
# harness. The harness lives in its own workspace crate so the
# dependency direction matches production (this crate orchestrates the
# daemon; nothing in `apps/daemon` depends on this crate).
codemux-test-ssh-harness.workspace = true

[lints]
workspace = true
