[package]
name = "codemux-session"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
# Stage 4: the build script assembles the codemuxd-bootstrap tarball
# into OUT_DIR. See `build.rs` and `src/bootstrap.rs`. The build script
# rewrites the archive whenever apps/daemon, crates/wire, Cargo.lock,
# rust-toolchain.toml, or bootstrap-root/Cargo.toml change.
build = "build.rs"

[dependencies]
codemux-shared-kernel.workspace = true
codemux-wire.workspace = true

thiserror.workspace = true
tracing.workspace = true

# AgentTransport surface (Stage 3): owns the per-agent PTY plus the
# crossbeam channel that drains the reader thread. The session crate
# stays vendor-light intentionally — these are the only infra deps it
# pulls in.
portable-pty.workspace = true
crossbeam-channel.workspace = true

[build-dependencies]
# Pure-Rust tar + gzip. Used only by build.rs to assemble the
# codemuxd-bootstrap tarball that `src/bootstrap.rs` embeds via
# include_bytes!. `flate2` defaults to its pure-Rust backend
# (`miniz_oxide`) so the build does not need any system libraries.
tar = "0.4"
flate2 = "1.0"

[dev-dependencies]
tempfile.workspace = true
# Tests in `src/bootstrap.rs` decompress and inspect the embedded
# tarball produced by `build.rs`. Same crates as `[build-dependencies]`
# but Cargo doesn't share those with `cfg(test)` — re-declare here.
tar = "0.4"
flate2 = "1.0"

[lints]
workspace = true
