[package]
name = "codemux-session"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "codemux session bounded context: agent lifecycle and AgentTransport."
# Per-crate; not inherited from the workspace.
keywords = ["codemux", "session", "agent", "pty", "lifecycle"]
categories = ["data-structures"]

[dependencies]
codemux-shared-kernel.workspace = true
codemux-wire.workspace = true

thiserror.workspace = true
tracing.workspace = true

# AgentTransport surface (Stage 3): owns the per-agent PTY plus the
# crossbeam channel that drains the reader thread. The session crate
# stays vendor-light intentionally — these are the only infra deps it
# pulls in.
portable-pty.workspace = true
crossbeam-channel.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
# Exposes a no-op `AgentTransport::for_test` constructor that backs the
# transport with a real local PTY running `cat`. Lets downstream crates
# (e.g. `codemux-cli`) build a `RuntimeAgent` in unit tests without a
# `claude` binary on PATH or a per-crate seam. Always off in release
# builds; enabled via the TUI's `[dev-dependencies]`.
test-util = []

[lints]
workspace = true
