[package]
name = "codemux-shared-kernel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
description = "codemux shared kernel: typed ID newtypes (HostId, AgentId, GroupId)."

[dependencies]

[lints]
workspace = true
