[package]
name = "codemux-test-ssh-harness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
# Test-only crate: never goes to crates.io. Overrides the workspace
# default (`publish = true`, set by AD-31). See AD-30 carve-outs.
publish = false
repository.workspace = true
description = "codemux test-only SSH harness."

[dependencies]
tempfile.workspace = true

[lints]
workspace = true
