[package]
name = "codemux-wire"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
description = "codemux wire protocol: message types between codemux and codemuxd."

[dependencies]
thiserror.workspace = true

[lints]
workspace = true
